kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudops-app
  namespace: cloudops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloudops-app

  template:
    metadata:
      labels:
        app: cloudops-app

    spec:
      containers:
        - name: cloudops-app
          image: cloudops-ai-platform-cloudops-app:latest

          ports:
            - containerPort: 5000
