kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudops-service
  namespace: cloudops

spec:
  selector:
    app: cloudops-app

  ports:
  - port: 80
    targetPort: 5000

  type: LoadBalancer
